2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php: change the method for test if a
	module is a numeric, and can normalize. Now obtain the ids from modules tipe
	that it's not proc or string, and this ids use to test.
	Fixes: 2849325

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/map_builder.php: change (at the moment) the ajax for
	delete elements by html static form with select, because sometimes (when you
	try delete elements with bigger dimensions fail).
	Fixes: 2815063

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: fix the pagination when it has
	a search, and fix the pagination and delete element in the page.
	Fixes: 2857846

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/exportdata.php, godmode/agentes/agent_manager.php,
	godmode/reporting/map_builder.php, godmode/reporting/graph_builder.php,
	godmode/alerts/alert_list.php: fix the bug that the div of autocomplete
	don't show.
	Fixes: 2856945

2009-09-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/styles/pandora.css, godmode/alerts/alert_list.php: minor fixes
	for styles warnings.

2009-09-14  Sancho Lerena <slerena@artica.es>

	* general/error_dbconfig.php, 
	  general/error_authconfig.php
	  general/error_emptyconfig.php: Error messages have it's own page.

	* config_process.php, functions_config.php: Removed "inline" error pages, 
	and moved out. Auto_update is not set to ON if not present, just once, and
	this is managed by extension itself.

	* functions.php: Added function "return_graphtype" to calculate graphtype
	depending on id_module_type.

	* styles/install.css: Some style fixes.

	* operation/agentes/estado_monitores.php: Some code cleanup using the new 
	function to get graphtype.

	* operation/agentes/estado_ultimopaquete.php: Some code cleanup with the
	new function to get graphtype and fixed a bug in data timestamp calculation.
